crates/tui/snapshots/inline/state/removed_dictate_before_session_inline.snap
---
source: crates/tui/src/app/state_tests.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                    Unknown command: /dictate.  
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
